k8s/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
  labels:
    name: myingress-srv
spec:
  rules:
  - host: acme.com
    http:
      paths:
      - pathType: Prefix
        path: "/api/platforms"
        backend:
          service:
            name: platforms-clusterip-srv
            port: 
              number: 80
      - path: /api/c/plaforms
        pathType: Prefix
        backend:
          service:
            name: commands-clusterip-srv
            port:
              number: 80
